# pytest-codegen

./: .gitignore  README.md  pyproject.toml  setup.cfg
pytest_codegen/: __main__.py  main.py  types.py
pytest_codegen/templates/: filename.template  function.template  import.template  test_function.template
tests/: test_pytest_codegen.py
tests/unittests/: main.py
