[tool.poetry]
name = "pytest-codegen"
version = "0.0.3"
description = "Automatically create pytest test signatures"
authors = ["Jeremy Schiemann <jeremy.schiemann@gmail.com>"]
readme = "README.md"
repository = "https://github.com/jeremyschiemann/pytest-codegen"
homepage = "https://github.com/jeremyschiemann/pytest-codegen"
license = "MIT"

classifiers = [
        "Development Status :: 2 - Pre-Alpha",
        "Natural Language :: English",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.8"
]


[tool.poetry.scripts]
pytest-codegen = 'pytest_codegen.__main__:entry'
ptc = 'pytest_codegen.__main__:entry'


[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"
redbaron = "^0.9.2"
jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
pydocstyle = "^5.0.2"
mypy = "^0.782"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
